updated encodings with euc-kr charset

--- a/UniversalMailer/encodings.plist
+++ b/UniversalMailer/encodings.plist
@@ -78,6 +78,8 @@
 	<integer>2147485744</integer>
 	<key>gb18030</key>
 	<integer>2147485744</integer>
+	<key>euc-kr</key>
+	<integer>2147486016</integer>
 	<key>gbk</key>
 	<integer>2147485233</integer>
 </dict>
