--- a/UniversalMailer/UniversalMailer-Info.plist
+++ b/UniversalMailer/UniversalMailer-Info.plist
@@ -28,6 +28,9 @@
 	<string>UniversalMailer</string>
 	<key>SupportedPluginCompatibilityUUIDs</key>
 	<array>
+		<string>D1EFE124-86FF-4751-BF00-80B2C0D6F2E4</string>
+		<string>F4C26776-22B3-4A0A-96E1-EA8E4482E0B5</string>
+		<string>88ED2D4C-D384-4BF5-8E94-B533455E6AAF</string>
 		<string>1CD40D64-945D-4D50-B12D-9CD865533506</string>
 	</array>
 </dict>
