Add Mail.app Version 9.1 (3096.5) to compatibility list.

--- a/UniversalMailer/UniversalMailer-Info.plist
+++ b/UniversalMailer/UniversalMailer-Info.plist
@@ -32,6 +32,7 @@
 		<string>F4C26776-22B3-4A0A-96E1-EA8E4482E0B5</string>
 		<string>88ED2D4C-D384-4BF5-8E94-B533455E6AAF</string>
 		<string>1CD40D64-945D-4D50-B12D-9CD865533506</string>
+		<string>DAF41AB7-F9AD-4273-9934-C81C74705B69</string>
 	</array>
 </dict>
 </plist>
